working docker container and notebook

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,10 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Ignore 3rd-party projects for reference
+REFERENCE/
+
+# Audio files
+*.mp3
+*.wav
