--- a/application/backend/requirements.txt
+++ b/application/backend/requirements.txt
@@ -3,6 +3,6 @@ Flask-CORS==4.0.0
 librosa==0.10.1
 numpy==1.24.3
 scipy==1.11.3
-madmom==0.16.1
+# madmom==0.16.1
 python-dotenv==1.0.0
-Werkzeug==2.3.7 
+Werkzeug==2.3.7
