--- a/application/dockerfile
+++ b/application/dockerfile
@@ -1,25 +1,16 @@
-# Use the official Node.js image as the base image
-FROM node:22.14 AS frontend
+# Use the official Python 3.11 image as the base image
+FROM python:3.11 AS base
 
-# Set the working directory for the frontend
-WORKDIR /app/frontend
+RUN apt-get update
 
-# Copy frontend package files and install dependencies
-COPY frontend/package*.json ./
-RUN npm install
-
-# Copy the rest of the frontend code
-COPY frontend/ .
-
-# Build the frontend application
-RUN npm run build
-
-# Use the official Python 3.12 image as the base image
-FROM python:3.12 AS backend
+# Install Node.js version 22
+RUN apt-get install -y curl && \
+    curl -fsSL https://deb.nodesource.com/setup_22.x | bash - && \
+    apt-get install -y nodejs
 
 # Install the required system packages
-RUN apt-get update
 RUN apt-get install -y ffmpeg git cmake libdbus-1-dev libgirepository1.0-dev gfortran libopenblas-dev
+
 RUN apt-get clean
 
 # Install pip dependencies
@@ -37,14 +28,27 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the rest of the backend code
 COPY backend/ .
 
+# Set the working directory for the frontend
+WORKDIR /app/frontend
+
+# Copy frontend package files and install dependencies
+COPY frontend/package*.json ./
+RUN npm install
+
+# Copy the rest of the frontend code
+COPY frontend/ .
+
+# Build the frontend application
+RUN npm run build
+
 # Final stage to combine both frontend and backend
-FROM node:18.17
+FROM base
 
 # Copy built frontend from the frontend stage
-COPY --from=frontend /app/frontend /app/frontend
+COPY --from=base /app/frontend /app/frontend
 
 # Copy backend from the backend stage
-COPY --from=backend /app/backend /app/backend
+COPY --from=base /app/backend /app/backend
 
 # Set the working directory
 WORKDIR /app
@@ -54,4 +58,3 @@ EXPOSE 3000 5000
 
 # Start both frontend and backend
 CMD ["sh", "-c", "cd /app/backend && python app.py & cd /app/frontend && npm run start"]
-
