--- a/application/dockerfile
+++ b/application/dockerfile
@@ -9,7 +9,7 @@ RUN apt-get install -y curl && \
     apt-get install -y nodejs
 
 # Install the required system packages
-RUN apt-get install -y ffmpeg git cmake libdbus-1-dev libgirepository1.0-dev gfortran libopenblas-dev
+RUN apt-get install -y ffmpeg git cmake gfortran libopenblas-dev
 
 RUN apt-get clean
 
@@ -28,6 +28,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the rest of the backend code
 COPY backend/ .
 
+# Frontend build stage
+FROM node:22 AS frontend-build
+
 # Set the working directory for the frontend
 WORKDIR /app/frontend
 
@@ -38,17 +41,14 @@ RUN npm install
 # Copy the rest of the frontend code
 COPY frontend/ .
 
-# Create a .env file with the specified content
-RUN echo "NEXT_PUBLIC_API_URL=http://35.83.167.212:5000" > .env
-
 # Build the frontend application
 RUN npm run build
 
 # Final stage to combine both frontend and backend
 FROM base
 
-# Copy built frontend from the frontend stage
-COPY --from=base /app/frontend /app/frontend
+# Copy built frontend from the frontend-build stage
+COPY --from=frontend-build /app/frontend /app/frontend
 
 # Copy backend from the backend stage
 COPY --from=base /app/backend /app/backend
