--- a/application/frontend-2/package.json
+++ b/application/frontend-2/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.20",
     "axios": "^1.11.0",
+    "lodash": "^4.17.21",
     "next": "^15.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
