--- a/application/frontend-2/package.json
+++ b/application/frontend-2/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/lodash": "^4.17.20",
     "axios": "^1.11.0",
     "lodash": "^4.17.21",
