--- a/application/frontend/package.json
+++ b/application/frontend/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "frontend",
+  "name": "application-2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/wavesurfer.js": "^6.0.12",
-    "axios": "^1.8.3",
-    "next": "15.2.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "wavesurfer.js": "^7.9.1"
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/lodash": "^4.17.20",
+    "axios": "^1.11.0",
+    "lodash": "^4.17.21",
+    "next": "^15.5.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "wavesurfer.js": "^7.10.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.2",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "^24.3.1",
+    "@types/react": "^19.1.12",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
+    "typescript": "^5.9.2"
   }
 }
