--- a/application/dockerfile-dev
+++ b/application/dockerfile-dev
@@ -3,10 +3,6 @@ FROM python:3.11 AS base
 
 RUN apt-get update
 
-# Install Node.js version 22
-RUN apt-get install -y curl && \
-    curl -fsSL https://deb.nodesource.com/setup_22.x | bash - && \
-    apt-get install -y nodejs
 
 # Install the required system packages
 RUN apt-get install -y ffmpeg git cmake gfortran libopenblas-dev
@@ -29,7 +25,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 WORKDIR /app
 
 # Expose ports for frontend and backend
-EXPOSE 3000 5001
+EXPOSE 5001
 
 # Sleep on startup
 CMD ["sh", "-c", "sleep infinity"]
