--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '3.8'
 services:
   app:
-    image: ${IMAGE_NAME:-infinite-worship:latest}
+    image: ${IMAGE_NAME}
     build:
       context: .
       dockerfile: dockerfile
