feat(deployment): Separate frontend and backend Docker images with Nginx
Refactor the application's Docker setup to build and deploy the frontend and backend as distinct services.

- **`application/dockerfile`**: Implemented a multi-stage build process for both backend (Python) and frontend (Next.js). The backend now uses `python:3.11-slim` and the frontend is served by `nginx:alpine`.
- **`application/docker-compose.yml`**: Updated to define separate `backend` and `frontend` services, each with its own build target and image. The frontend service now uses Nginx and proxies API requests to the backend.
- **`application/build.sh`**: Modified to build, tag, and push separate Docker images for the backend and frontend to AWS ECR.
- **`application/frontend/next.config.mjs`**: Added Next.js configuration to enable static HTML export for Nginx serving.
- **`application/nginx.conf`**: New Nginx configuration file to serve the static Next.js frontend and proxy `/api/` and other backend-related requests to the `backend` service.

This change improves deployment flexibility, allows for independent scaling of frontend and backend, and optimizes Docker image sizes.

--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -1,9 +1,24 @@
 services:
-  app:
-    image: ${IMAGE_NAME}
+  backend:
+    image: infinite-worship-backend-arm64:${TAG:-latest}
     build:
       context: .
       dockerfile: dockerfile
+      target: backend-final
     ports:
-      - "3000:3000"
       - "5001:5001"
+    volumes:
+      - ./backend:/app/backend # Mount backend code for development (optional, remove for production)
+      - ./backend/uploads:/app/backend/uploads # Persist uploads
+    environment:
+      - PYTHONUNBUFFERED=1 # Ensure Python output is unbuffered
+  frontend:
+    image: infinite-worship-frontend-arm64:${TAG:-latest}
+    build:
+      context: .
+      dockerfile: dockerfile
+      target: frontend-final
+    ports:
+      - "80:3000" # Map host port 80 to Nginx container port 3000
+    depends_on:
+      - backend # Frontend depends on backend for API calls
