--- a/application/dockerfile
+++ b/application/dockerfile
@@ -1,17 +1,13 @@
-# Use the official Python 3.11 image as the base image
-FROM python:3.11 AS base
+# Use the official Python 3.11 slim image as the base image
+FROM python:3.11-slim AS backend-builder
 
-RUN apt-get update
-
-# Install Node.js version 22
-RUN apt-get install -y curl && \
+# Optimize apt-get usage and install Node.js and system packages
+RUN apt-get update && \
+    apt-get install -y curl && \
     curl -fsSL https://deb.nodesource.com/setup_22.x | bash - && \
-    apt-get install -y nodejs
-
-# Install the required system packages
-RUN apt-get install -y ffmpeg git cmake gfortran libopenblas-dev
-
-RUN apt-get clean
+    apt-get install -y nodejs ffmpeg git cmake gfortran libopenblas-dev && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 # Install pip dependencies
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel
@@ -29,7 +25,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY backend/ .
 
 # Frontend build stage
-FROM node:22 AS frontend-build
+FROM node:22-slim AS frontend-build
 
 # Set the working directory for the frontend
 WORKDIR /app/frontend
@@ -45,20 +41,34 @@ COPY frontend/.env ./.env
 # Build the frontend application
 RUN npm run build
 
-# Final stage to combine both frontend and backend
-FROM base
+# Final stage for the backend
+FROM python:3.11-slim AS backend-final
 
-# Copy built frontend from the frontend-build stage
-COPY --from=frontend-build /app/frontend /app/frontend
+# Copy installed Python packages from backend-builder
+COPY --from=backend-builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
+COPY --from=backend-builder /usr/local/bin /usr/local/bin
 
-# Copy backend from the backend stage
-COPY --from=base /app/backend /app/backend
+# Copy backend from the backend-builder stage
+COPY --from=backend-builder /app/backend /app/backend
 
 # Set the working directory
-WORKDIR /app
+WORKDIR /app/backend
 
-# Expose ports for frontend and backend
-EXPOSE 3000 5001
+# Command to run the backend
+CMD ["python", "app.py"]
 
-# Start both frontend and backend
-CMD ["sh", "-c", "cd /app/backend && python app.py & cd /app/frontend && npm run start"]
+
+# Final stage for the frontend (Nginx)
+FROM nginx:alpine AS frontend-final
+
+# Copy the Nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy built frontend from the frontend-build stage
+COPY --from=frontend-build /app/frontend/out /usr/share/nginx/html
+
+# Expose port 3000 for Nginx
+EXPOSE 3000
+
+# Command to run Nginx
+CMD ["nginx", "-g", "daemon off;"]
