--- a/application/dockerfile
+++ b/application/dockerfile
@@ -44,6 +44,11 @@ RUN npm run build
 # Final stage for the backend
 FROM python:3.11-slim AS backend-final
 
+# Install ffmpeg for audio processing
+RUN apt-get update && \
+    apt-get install -y ffmpeg && \
+    rm -rf /var/lib/apt/lists/*
+
 # Copy installed Python packages from backend-builder
 COPY --from=backend-builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
 COPY --from=backend-builder /usr/local/bin /usr/local/bin
