--- a/application/dockerfile-dev
+++ b/application/dockerfile-dev
@@ -4,9 +4,10 @@ FROM python:3.11 AS base
 RUN apt-get update
 
 # Install Node.js version 22
-RUN apt-get install -y curl && \
-    curl -fsSL https://deb.nodesource.com/setup_22.x | bash - && \
-    apt-get install -y nodejs
+RUN apt-get install -y curl xz-utils && \
+    curl -fsSL https://nodejs.org/dist/v22.12.0/node-v22.12.0-linux-arm64.tar.xz | tar -xJ -C /usr/local --strip-components=1
+
+
 
 # Install the required system packages
 RUN apt-get install -y ffmpeg git cmake gfortran libopenblas-dev
