--- a/application/docker-compose.prod.yml
+++ b/application/docker-compose.prod.yml
@@ -7,9 +7,11 @@ services:
       - ./backend/uploads:/app/backend/uploads # Persist uploads
     environment:
       - PYTHONUNBUFFERED=1 # Ensure Python output is unbuffered
+    restart: unless-stopped
   frontend:
     image: public.ecr.aws/u4p9h6o7/mhuang74/infinite-worship:infinite-worship-frontend-arm64-latest
     ports:
       - "80:3000" # Map host port 80 to Nginx container port 3000
     depends_on:
       - backend # Frontend depends on backend for API calls
+    restart: unless-stopped
